creating froms for names based off passangers, working

--- a/client/styles.css
+++ b/client/styles.css
@@ -49,151 +49,42 @@ a{text-decoration: none;}
     font-size: 2.5rem;
 }
 
-form{
+.input-box{
     display: flex;
-    align-items: center;
-    margin: 10vw;
-    margin-top: 5vh;
-    width: 80vw;
-    height: 10vh;
-    border: 1px solid #46869b;
-}
-
-#passanger-div{
-    display: flex;
-    align-items: flex-start;
     justify-content: space-around;
-    flex-direction: column;
-    height:10vh;
-    flex: 1;
-    border-right: 1px solid #46869b;
-}
-
-#departing-div{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    height:10vh;
-    flex: 1;
-    border-right: 1px solid #46869b;
-}
-
-#arriving-div{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    height:10vh;
-    flex: 1;
-    border-right: 1px solid #46869b;
-}
-
-#date-div{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    height:10vh;
-    flex: 1;
-    border-right: 1px solid #46869b;
-}
-
-#search-btn-div{
-    display: flex;
     align-items: center;
-    justify-content: center;
-    height:10vh;
-    flex: 1;
+    margin-left: 5vw;
+    margin-bottom: 1vh;
+    width: 90vw;
+    height: 10vh;
+    border: #52b4cf 1px solid;
 }
 
-#search-btn{
-    height: 8vh;
-    width: 8vw;
-    background-color: #52b4cf;
-    cursor: pointer;
+.selector-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex: 1;
+    border-right: #52b4cf 1px solid;
+    height: 10vh;
+    color: #52b4cf;
 }
 
 label{
     color: #52b4cf;
 }
-
-input{
-    height: 8vh;
-    width: 8vw;
-    cursor: pointer;
-}
-select{
-    height: 8vh;
+.selectors {
     flex: 1;
-    cursor: pointer;
- }
-
-#passangers{
-    border: 0;
-    height: 10vh;
-    flex: 1;
-    cursor: pointer;
-}
-
-#arriving-on{
-    border: 0;
-    height: 10vh;
-    flex: 1;
-    cursor: pointer;
-}
-
-#departing-from{
-    border: 0;
-    height: 10vh;
-    flex: 1;
-    cursor: pointer;
-}
-
-#date{
-    border: 0;
-    height: 10vh;
-    width: 12vw;
-    flex: 1;
-    cursor: pointer;
-    font-size: 2em;
-    display: flex;
-}
-
-select{
-    text-align: start;
-    font-size: 2em;
-}
-
-.name-div{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    height:10vh;
-    flex: 1;
-    border-right: 1px solid #46869b;
-}
-
-
-
-input[type="date"]::-webkit-calendar-picker-indicator {
-    z-index: -1;
-}
-
-input[type="text"]
-{
-    width: 12vw;
-    font-size: 2em;
-    background: transparent;
+    width: 17vw;
     border: none;
+    font-size: 2em;
 }
 
-#thank-you{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100vw;
-    height: 15vh;
+#search-btn{
+    align-self: center;
+    background-color: #52b4cf;
+    width: 12vw;
+    height: 8vh;
+    font-size: 1.5em;
 }
