--- a/client/styles.css
+++ b/client/styles.css
@@ -19,7 +19,7 @@ nav{
     width: 30vw;
 }
 
-#reserve{
+#sign-in{
     background-color:#52b4cf;
     height: 6vh;
     width: 7vw;
@@ -87,4 +87,47 @@ label{
     width: 12vw;
     height: 8vh;
     font-size: 1.5em;
+}
+
+#log-in-page-div{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 5vw;
+    height: 70vh;
+    width: 90vw;
+}
+
+.log-in-page-form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 60vh;
+    width: 30vw;
+    border: #52b4cf 1px solid;
+}
+
+.log-in-page-h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20vh;
+    width: 30vw;
+}
+
+.input-div{
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    margin-bottom: 5vh;
+    height: 20vh;
+    width: 25vw;
+}
+
+.button-box{
+        background-color:#52b4cf;
+        height: 6vh;
+        width: 7vw;
+        cursor: pointer;
 }
